--- a/app/src/main/res/layout/activity_make_agvto.xml
+++ b/app/src/main/res/layout/activity_make_agvto.xml
@@ -64,8 +64,6 @@
             android:background="#C0F0F8"
             android:orientation="horizontal">
 
-
-
             <TextView
                 android:id="@+id/textViewName"
                 android:layout_width="25dp"
@@ -76,18 +74,16 @@
                 android:textColor="@color/black"
                 android:textSize="10dp" />
 
-
             <TextView
                 android:id="@+id/tvSerNum"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:textColor="@color/black"
-                android:textSize="10dp"
+                android:textSize="11dp"
                 android:textStyle="bold" />
 
         </LinearLayout>
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -130,7 +126,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="32dp"
             android:backgroundTint="#0F89D5"
-            android:text="Сохранить диагностические технического обслуживания"
+            android:text="Сохранить данные технического обслуживания"
             android:textColor="#FFFFFF"
             android:textSize="12dp"
             android:textStyle="bold" />
