--- a/app/src/main/res/layout/activity_show_one_agv_to.xml
+++ b/app/src/main/res/layout/activity_show_one_agv_to.xml
@@ -88,7 +88,8 @@
                     android:layout_marginStart="5dp"
                     android:layout_weight="9.2"
                     android:textColor="@color/black"
-                    android:textSize="10dp" />
+                    android:textStyle="bold"
+                    android:textSize="11dp" />
 
 
             </LinearLayout>
@@ -121,7 +122,7 @@
                     android:id="@+id/tvNameTOText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3.5"
+                    android:layout_weight="5"
                     android:gravity="center"
                     android:text="Деталь/Наименование работ "
                     android:textColor="@color/black"
@@ -162,22 +163,7 @@
                     android:textSize="12dp"
                     android:textStyle="bold" />
 
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/grr" />
 
-                <TextView
-                    android:id="@+id/tvStatusTO"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.5"
-                    android:gravity="center"
-                    android:paddingEnd="2dp"
-                    android:text="Статус"
-                    android:textColor="@color/black"
-                    android:textSize="11dp"
-                    android:textStyle="bold" />
 
                 <View
                     android:layout_width="1dp"
