--- a/app/src/main/res/layout/item_agv_to.xml
+++ b/app/src/main/res/layout/item_agv_to.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="15dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
     android:orientation="vertical">
 
     <LinearLayout
@@ -31,10 +31,12 @@
                 android:id="@+id/tvNameTO"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="4"
+                android:layout_weight="5"
                 android:text="TextView:"
+                android:paddingStart="3dp"
+                android:paddingEnd="5dp"
                 android:textColor="@color/black"
-                android:textSize="13dp"
+                android:textSize="14dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -42,30 +44,23 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2.5"
-                android:paddingStart="2dp"
+                android:paddingStart="7dp"
+                android:paddingEnd="3dp"
                 android:text="TextView"
                 android:textColor="@color/black"
-                android:textSize="11dp" />
+                android:textSize="13dp" />
 
             <TextView
                 android:id="@+id/tvDataFutureTO"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2.5"
+                android:paddingStart="7dp"
+                android:paddingEnd="3dp"
                 android:text="TextView"
                 android:textColor="@color/black"
-                android:textSize="11dp" />
+                android:textSize="13dp" />
 
-            <TextView
-                android:id="@+id/tvStatusTO"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="2dp"
-                android:layout_weight="1"
-                android:text="Text"
-                android:textColor="@color/black"
-                android:textSize="12dp"
-                android:textStyle="bold"/>
 
         </LinearLayout>
 
