--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -40,7 +40,11 @@
         android:id="@+id/lLLog"
         android:layout_width="match_parent"
         android:layout_height="25dp"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:background="#21497A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,8 +60,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
+
             android:background="@null"
-            android:visibility="gone"
             app:srcCompat="@drawable/ic_filter_agv" />
 
         <ImageButton
